take margin off post.scss to fix grid spacing in post-container

--- a/app/assets/stylesheets/components/_post-container.scss
+++ b/app/assets/stylesheets/components/_post-container.scss
@@ -3,16 +3,16 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  justify-content: center;
   & li {
-    height: auto;
+    height: min-content;
     width: 50%;
-    padding: 0px 8px 15px;
+    padding: 0px 8px 16px;
     display: list-item;
   }
   & li:nth-child(n+3):nth-child(-n+8){
     height: min-content;
     width: 33%;
-    padding: 0px 8px 15px;
     display: list-item;
     & .post-content-description {
       display: none;
